methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:11: error: expected class or object definition
def makeL() {
^PatternPicture:23: error: Unmatched closing brace '}' ignored here
}
^