methods.picture.PatternPicture.scala.code
override def run() {
    forward();
    makeL();
    forward();
    forward();
  }
  
  
}

def makeL() {
  brushDown();
  brushUp();
  backward();
  left();
  forward();
  brushDown();
  brushUp();
  backward();
  right();
}